# Daily-cash-market

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  dashboard.bat  fetch_now.bat  pyproject.toml  requirements.txt  run_tests.bat  setup.bat
.streamlit/: config.toml  secrets.toml.example
Build_Prompt/: BUILD_PROMPT.md
config/: Others_Sector-SubSectors_List.xlsx  nse_holidays.yaml  others_to_classify.csv  sector_overrides.csv  settings.yaml
data/fii_imports/: README.txt
data/fpi_imports/: README.txt
scripts/: apply_sector_classifications.py  auto_update.py  backtest_may8.py  deep_verify.py  factor_ic_diagnostic.py  fno_sector_ic_diagnostic.py  formula_verify.py  market_open_check.py  run_daily.bat  sector_score_compare.py  signal_ic_diagnostic.py  signal_integrity_audit.py  upload_snapshot.py  verify_delivery.py
src/: cli.py  config_loader.py  logging_setup.py
src/analytics/: __init__.py  base.py  data_health.py  delivery_signals.py  fao_participants.py  fii_stats.py  fno_activity.py  fno_expiry.py  fno_signals.py  fno_stocks.py  fpi_flows.py  index_momentum.py  index_prediction.py  market_intelligence.py  memory_engine.py  regime_detection.py  sector_aggregator.py  sector_rotation.py  sector_signal_backtest.py  signal_backtest.py
src/core/: __init__.py  cloud.py  config.py  exceptions.py  logging.py  types.py
src/dashboard/: __init__.py  app.py  constants.py  state.py  streamlit_app.py
src/data/: __init__.py  connection.py  health.py  repository.py  schema.py
src/ingestion/: __init__.py  (+12 more)
tests/: conftest.py  test_analytics.py  test_ingestion.py
(+28 files in other folders)
